# om-lineage-cli

./: .gitignore  README.md  pyproject.toml
src/om_lineage_cli/: cli.py  config.py  formatter.py  models.py  openmetadata.py  resolver.py  sql_parser.py
tests/: test_cli_args.py  test_cli_flow.py  test_formatter.py  test_models.py  test_openmetadata.py  test_payload.py  test_readme.py  test_resolver.py  test_sql_parser.py  test_version.py
